--- a/zips/plugin.video.salts/changelog.txt
+++ b/zips/plugin.video.salts/changelog.txt
@@ -1,3 +1,8 @@
+[B]Version 1.0.46[/B]
+- More icefilms ad testing
+- Add dizimag scraper
+- Add ayyex scraper
+
 [B]Version 1.0.45[/B]
 - Add beinmovie scraper
 - Fix srt scraper
