--- a/zips/script.module.trakt/changelog.txt
+++ b/zips/script.module.trakt/changelog.txt
@@ -1,3 +1,11 @@
+Version 2.4.1
+
+- trakt.py Version 2.4.1
+
+Version 2.3.3
+
+- trakt.py ac86ab644e5900df388f236f8ffdf8413fcf5248
+
 Version 2.3.2
 
 - trakt.py 480dbe963ee0c92c1d77b271da000c9f3fbfe9b9
